--- a/TODO
+++ b/TODO
@@ -1,1 +1,2 @@
-TODO: Solve the Bug where the Camera.target updates with the mouse wheel
+#SOLVED TODO: Solve the Bug where the Camera.target updates with the mouse wheel
+#SOLVED TODO: Fix the Chunk System. 
