Added Simple World Generation

--- a/TODO
+++ b/TODO
@@ -1,4 +1,4 @@
 #SOLVED TODO: Solve the Bug where the Camera.target updates with the mouse wheel
 #SOLVED TODO: Fix the Chunk System. 
-
-TODO: Fix the Chunk Page of the Imgui
+#SOLVED TODO: Fix the Chunk Page of the Imgui
+#SOLVED TODO: When the seed changes, the map should change as well.
